examples/datalog/14_aggregations/50_sum_all.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_sum_all
Knowledge graph 'test_sum_all' created.
Switched to knowledge graph: test_sum_all
> .kg use test_sum_all
Switched to knowledge graph: test_sum_all
> +values[(10,), (20,), (30,), (40,), (50,)].
Inserted 5 fact(s) into 'values'.
> total(<SUM:X>) :- values(X).
Script error: Parse error: Unknown aggregate function: 
